# polyphasia

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  run_tests.sh
data/: data_source.md
data/intermediate_results/: languages.json  most_connected_100_nodes_all_data.json
docs/: README-DEV.md
notebooks/: connectivity_analysis.ipynb  directed_acyclic_graph_analysis.ipynb  initial_eda.ipynb  undirected_graph_analysis.ipynb
notebooks/.ipynb_checkpoints/: connectivity_analysis-checkpoint.ipynb  initial_eda-checkpoint.ipynb
polyphasia/: __init__.py  connectivity_analysis.ipynb  constants.py  eda.py  graph.py  initial_eda.ipynb  loader.py  neo4j_conversion.py  schema.py
testing_framework/: .coveragerc  mypy.ini  pytest.ini
